--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ cryptography==43.0.3
 daphne==4.1.2
 Django==5.1.3
 django-cors-headers==4.6.0
+django-jazzmin==3.0.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 hyperlink==21.0.0
